# artifact-pipeline

./: .gitignore  HACKING.md  README.md  README.rst  requirements.txt  run-dev-server.sh  setup.cfg  test-requirements.txt  tox.ini
.github/workflows/: snapcraft.yaml  tox.yaml
artifact_pipeline/: __init__.py  cmd.py  config.py  utils.py  version.py
artifact_pipeline/activities/: archive_backport.py  backport_o_matic.py  backport_package.py  hello_world.py
artifact_pipeline/conf/: __init__.py  connection.py  deb.py
artifact_pipeline/templates/: builds.html.j2  index.html.j2
artifact_pipeline/templates/css/: tracker.css
artifact_pipeline/templates/js/: filter.js
artifact_pipeline/workers/: archive_backport.py  backport_o_matic.py  backport_package.py  hello_world.py
artifact_pipeline/workflows/: archive_backport.py  backport_o_matic.py  backport_package.py  hello_world.py
artifact_pipeline/zaza/: setup.py
snap/: snapcraft.yaml
tests/: tests.yaml
tests/bundles/: jammy.yaml
tools/: run-backport-o-matic-workflows  run-backport-workers  terminate-backport-o-matic-workflows
unit_tests/: test_hello_world.py
