[metadata]
name = artifact-pipeline
author = OpenStack Charmers
author_email = openstack-charmers@lists.launchpad.net
summary = Automation tools
description_file = README.md
description_content_type = text/x-markdown; charset=UTF-8
home_page = https://github.com/openstack-charmers/artifact-pipeline
project_urls =
    Bug Tracker = https://bugs.launchpad.net/artifact-pipeline
    Source Code = https://github.com/openstack-charmers/artifact-pipeline
license = Apache-2
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
keywords =
    temporal
    ci

[files]
packages =
    artifact_pipeline

[entry_points]
console_scripts =
    artifact-pipeline = artifact_pipeline.cmd:main
